# cpp-sample-project-0

./: .gitignore  CMakeLists.txt  README.md  build.sh
3rd/base64/: base64.hpp
3rd/jemalloc/lib/x64/pkgconfig/: jemalloc.pc
3rd/libzip-1.10.1/lib/: libzip.so.5.5
3rd/libzip-1.10.1/lib/cmake/libzip/: libzip-config.cmake  libzip-targets-noconfig.cmake  libzip-targets.cmake
3rd/libzip-1.10.1/lib/pkgconfig/: libzip.pc
3rd/openssl-1.1.0f/aarch64/: libcrypto.so.1.1  libssl.so.1.1
3rd/openssl-1.1.0f/include/openssl/: opensslconf.h
3rd/openssl-1.1.0f/x86_64/: libcrypto.so.1.1  libssl.so.1.1
3rd/protobuf-v3.20.2/: README.md  build.sh  build_armhf.sh
3rd/sqlite3-3420000/armhf/lib/: libsqlite3.la
3rd/sqlite3-3420000/x64-glic2.29/lib/: libsqlite3.la
3rd/sqlite3-3420000/x64/lib/: libsqlite3.la
3rd/uuid-1.0.3/armhf/lib/: libuuid.la  libuuid.so.1.0.0
3rd/uuid-1.0.3/x64/lib/: libuuid.la  libuuid.so.1.0.0
3rd/uuid-1.0.3/x64/lib/pkgconfig/: uuid.pc
hello-test/: start0.cpp  tm
script/: config.yaml
src/: start.cpp
src/config/: config.cpp  config.hpp
src/log/: log.cpp  log.hpp
src/threadpool/: threadPool.hpp  threadrefer.h.txt
test/: CMakeLists.txt
test/test_base64/: CMakeLists.txt  test_base64.cpp
test/test_jemalloc/: CMakeLists.txt  start.cpp
test/test_json/: CMakeLists.txt  start.cpp
test/test_log/: CMakeLists.txt  start.cpp
test/test_openmp/: CMakeLists.txt  start.cpp
test/test_protobuf/: CMakeLists.txt  hello.proto  start.cpp
test/test_protobuf/hello/: hello.pb.cc  hello.pb.h
test/test_sqlite3/: CMakeLists.txt  start.cpp
test/test_threadpool/: CMakeLists.txt  test_threadpool.cpp
test/test_uuid/: CMakeLists.txt  start.cpp
test/test_zlib/: CMakeLists.txt  testZipFile.cpp
toolchains/: aarch64.cmake  armhf.cmake  x64.cmake
